2004-12-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h: rename zip_read_func to zip_source_callback, struct
	zip_cmd to struct zip_source_cmd, and ZIP_CMD_* to ZIP_SOURCE_*;
	adapt users.
	
	* lib/zip_open.c (_zip_checkcons): always initialize variables

2004-12-22  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename zip_error_sys_type to zip_error_get_sys_type.
	Adapt callers and documentation.

2004-11-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_get_name.c (zip_get_name): add flags argument.
	(_zip_get_name): new function.
	* lib/zip_uncange.c (zip_unchange): return error if unchanging
	name would result in duplicate name in archive.
	
	* lib/zip_name_locate.c (_zip_name_locate): new function.
	(zip_name_locate): move actual name lookup to _zip_name_locate.
	* lib/zip_set_name.c (_zip_set_name): don't allow duplicate names
	in archive; return error if name is NULL.
	* lib/zip_replace.c (_zip_replace): don't call _zip_set_name when
	name is NULL.
	* lib/zip_get_name.c (zip_get_name): fix when called with
	partially initialized entry.
	
2004-11-30  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zipint.h: Include zip.h; add zlib.h.
	* zip.h: Remove zlib.h.
	* src/zipcmp.c: Add zlib.h.

	* zipint.h: Rename _zip_new_entry to _zip_entry_new;
	rename _zip_free_entry to _zip_entry_free; adapt users.

2004-11-18  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename zip_source_data to zip_source_buffer.
	Adapt users and documentation.

	* lib/zip_source_*: Verify user-supplied data.

	* zip.h: Rename zip_get_error to zip_error_get;
	rename zip_file_get_error to zip_file_error_get;
	rename zip_error_str to zip_error_to_str;
	replace various zip_add_* and zip_replace_* functions
	with zip_source_*.  Adapt users.  Update docs.

2004-11-17  Thomas Klausner <wiz@danbala.tuwien.ac.at>

	* zip.h: Rename ZERR_* to ZIP_ER_*; rename ZIP_ET_ZIP to
	ZIP_ET_ZLIB; remove ZIP_CH_ISCOMP from zip.h.  Adapt users.
